roles/k8s-install-monitor/templates/esalert-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: elastalert2
  namespace: monitoring
  labels:
    app: elastalert2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastalert2
  template:
    metadata:
      labels:
        app: elastalert2
    spec:
      volumes:
        - name: email-auth
          configMap:
            name: email-auth
            defaultMode: 420
            items:
              - key: email-auth
                path: email-auth.yaml
        - name: rules
          configMap:
            name: elastalert2-rules
            defaultMode: 420
        - name: config
          configMap:
            name: elastalert2-config
            items:
              - key: elastalert_config
                path: config.yaml
            defaultMode: 420
      containers:
        - name: elastalert
          image: 10.12.107.150:80/public/elastalert2:2.2.3
          resources:
            requests:
              cpu: '0.2'
              memory: 300Mi
            limits:
              cpu: '2'
              memory: 4Gi
          volumeMounts:
            - name: config
              mountPath: /opt/elastalert/config.yaml
              subPath: config.yaml
            - name: rules
              mountPath: /opt/elastalert/rules
            - name: email-auth
              mountPath: /opt/elastalert/rules/auth
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: elastalert2
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
